Fix low-contrast text

--- a/assets/css/settings/sass-vars.scss
+++ b/assets/css/settings/sass-vars.scss
@@ -1,7 +1,7 @@
 $black: #000;
 $darkgrey: #222;
 $midgrey: #777;
-$grey: #aaa;
+$grey: #ccc;
 $lightgrey: #ffead1;
 $white: #fff;
 $dimwhite: rgba($white, 0.2);
